--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Huikee testisivu</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <nav>
+  <nav class="navigation">
     <ul>
       <li><a href="https://www.google.fi/webhp?ie=UTF-8&rct=j">Google</a>
       <li><a href="https://www.google.fi/search?q=corgi&espv=2&biw=1366&bih=662&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjj-8fAo-zRAhVGOJoKHcVJCpUQ_AUIBigB">Corgeja</a>
     </ul>
   </nav>
-  <h1>My First Post</h1>
+  <header>
+    <h1> Tervetuloa :-) </h1>
+  </header>
+  <h2>My First Post</h2>
     <article>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.
     </article>
     <img src="http://www.w3.org/html/logo/downloads/HTML5_Logo_512.png" width="100" alt="HTML5 Logo"/>
-  <h2>My Second Post</h2>
+  <h3>My Second Post</h3>
     <article>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allowfullscreen></iframe>
 </body>
