--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
     </ul>
   </nav>
   <header>
-    <h1> Tervetuloa :-) </h1>
+    <h1>Tervetuloa :-)</h1>
   </header>
-  <h2>My First Post</h2>
-    <article>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.
+  <section>
+    <article class="blog-post">
+      <h2>My First Post</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.</p>
+      <img class="resize" src="http://84.234.68.89/sites/default/files/styles/galleryimage/public/Rotuesittelyt/kolme_istuu.jpg?itok=Z0QiuCxk" width="100" alt="HTML5 Logo"/>
     </article>
-    <img src="http://www.w3.org/html/logo/downloads/HTML5_Logo_512.png" width="100" alt="HTML5 Logo"/>
-  <h3>My Second Post</h3>
-    <article>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allowfullscreen></iframe>
+    <article class="blog-post">
+      <h3>My Second Post</h3>
+      <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </article>
+  </section>
 </body>
 </html>
