--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </nav>
   <header>
     <h1>Tervetuloa :-)</h1>
+    <img class="resize" src="http://bannubansku.suntuubi.com/datafiles/gallery/1/Tervetuloa%20kyltti.jpg"/>
   </header>
   <section>
     <article class="blog-post">
