--- a/maakaasu.html
+++ b/maakaasu.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
 </head>
 <body>
+  background-image: src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTmiIpKKvg4elri3-pIJkS36OP2lJ8wWukYwZCXztNwNcCHHuqP"
   <header>
     <h1>Tervetuloa :-)</h1>
-    <img class="resize" src="http://bannubansku.suntuubi.com/datafiles/gallery/1/Tervetuloa%20kyltti.jpg"/>
+    <img class="resize" src="#"/>
   </header>
   <nav class="navigation">
     <ul>
