--- a/maakaasu.html
+++ b/maakaasu.html
@@ -5,12 +5,8 @@
   <title>Huikee testisivu</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
 </head>
-<body>
-  background-image: src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTmiIpKKvg4elri3-pIJkS36OP2lJ8wWukYwZCXztNwNcCHHuqP"
-  <header>
-    <h1>Tervetuloa :-)</h1>
-    <img class="resize" src="#"/>
-  </header>
+<body background=https://cdn.pixabay.com/photo/2015/12/08/00/29/northern-lights-1081752_960_720.jpg>
+
   <nav class="navigation">
     <ul>
       <li><a href="#">Maakaasu</a>
@@ -19,6 +15,9 @@
       <li><a href="#">Tukijaksi</a>
     </ul>
   </nav>
+  <header class="head">
+    <h1>MAAKAASU :-)</h1>
+  </header>
   <section>
     <article class="blog-post">
       <h2>My First Post</h2>
