from maakaasu to index

--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -10,7 +10,7 @@
 
   <nav class="navigation">
     <ul>
-      <li><a href="maakaasu.html">Maakaasu</a>
+      <li><a href="index.html">Maakaasu</a>
       <li><a href="kampanja.html">Kampanja</a>
       <li><a href="ajankohtaista.html">Ajankohtaista</a>
       <li class="active"><a href="tukijaksi.html">Tukijaksi</a>
