--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=https://cdn.pixabay.com/photo/2015/12/08/00/29/northern-lights-1081752_960_720.jpg>
+<body background=sky.jpg>
 
   <nav class="navigation">
     <ul>
@@ -21,16 +21,9 @@
   </header>
   <section>
     <article class="blog-post">
-      <h2>Make maakaasu great again</h2>
+      <h2>Make maakaasu great again!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.</p>
-      <img class="resize" src="http://84.234.68.89/sites/default/files/styles/galleryimage/public/Rotuesittelyt/kolme_istuu.jpg?itok=Z0QiuCxk" width="100" alt="HTML5 Logo"/>
-    </article>
-    <article class="blog-post">
-      <h3>My Second Post</h3>
-      <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </article>
+      <img src="Gasum_logo.jpg" class="resize">
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
