--- a/kampanja.html
+++ b/kampanja.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=https://cdn.pixabay.com/photo/2015/12/08/00/29/northern-lights-1081752_960_720.jpg>
+<body background=sky.jpg>
 
   <nav class="navigation">
     <ul>
@@ -23,7 +23,10 @@
     <article class="blog-post">
       <h2>Miksi maakaasu?</h2>
       <p>Maakaasun tunnustetaan olevan puhtain energialähde kaikista fossiilisista polttoaineista. Esimerkiksi kivihiiltä poltettaessa syntyy hiilidioksidipäästöjä noin 40% enemmän kuin maakaasua poltettaessa. Suomessa käytettävä maakaasu on pääosin pelkkää metaania (CH4), jonka poltosta ei siksi vapaudu lähes ollenkaan esimerkiksi rikkipitoisia kaasuja, jotka sadeveden mukana tulevat maan pinnalle ja vesistöihin, joissa se aiheuttaa luonnolle haitallista happamoitumista.
-	Suomen energiantuotanosta noin 8% tulee maakaasusta ja tästä suurin osa käytetään varsinkin Helsingin seudun asuntojen lämmityksestä. Tuomme Venäjältä maakaasun Suomeen, sillä Suomella ei ole omia maakaasuvaroja. Meillä on myös pitkäaikainen maakaasun tuontisopimus Venäjän kanssa.</p>
+	       Suomen energiantuotanosta noin 8% tulee maakaasusta ja tästä suurin osa käytetään varsinkin Helsingin seudun asuntojen lämmityksestä. Tuomme Venäjältä maakaasun Suomeen, sillä Suomella ei ole omia maakaasuvaroja. Meillä on myös pitkäaikainen maakaasun tuontisopimus Venäjän kanssa.</p>
+      <p>Maakaaasu on läsnä jokaisen suomalaisen arjessa, ja se tekee meille monenlaista hyvää. Kaasu tulee luonnosta, ja sitä pystytään siirtämään pitkiäkin matkoja turvallisesti ja luontoa säästäen. Kaasua käytetään kaikkialla, niin teollisuudessa, liikenteessä kuin kotonakin. Katso kaasun tarina!</p>
+      <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/bjDQbJUrn6c" frameborder="0" allowfullscreen></iframe>
     </article>
   </section>
   <footer class="foot">
