--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=https://cdn.pixabay.com/photo/2015/12/08/00/29/northern-lights-1081752_960_720.jpg>
+<body background=sky.jpg>
 
   <nav class="navigation">
     <ul>
@@ -22,8 +22,8 @@
   <section>
     <article class="blog-post">
       <h2> Osoita rakkautesi maakaasua kohtaan Amerikan tapaan!</h2>
-      <p>Osta upea "Make maakaasu great again"-lippalakki, joka auttaa sinua löytämään kaltaisesi! Lippalakissa on säätönauha takana, joten sen uskaltaa vaikka ostaa siskonpojalle ylioppilaslahjaksi!</p>
-      <img class="resize" src="http://84.234.68.89/sites/default/files/styles/galleryimage/public/Rotuesittelyt/kolme_istuu.jpg?itok=Z0QiuCxk" width="100" alt="HTML5 Logo"/>
+      <p>Osta upea "Make maakaasu great again"-lippalakki, joka auttaa sinua löytämään kaltaisesi! Lippalakissa on säätönauha takana, joten sen uskaltaa vaikka ostaa siskonpojalle ylioppilaslahjaksi! Saatavissa pian.</p>
+      <img class="resize" src="Lippis.jpg" width="100" alt="HTML5 Logo"/>
     </article>
     <article class="blog-post">
       <h3>Vaikuta</h3>
