--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=sky.jpg>
+<body>
 
   <nav class="navigation">
     <ul>
-      <li class="active"><a href="index.html">Maakaasu</a>
+      <li class="active"><a href="index.html">Etusivu</a>
       <li><a href="kampanja.html">Kampanja</a>
       <li><a href="ajankohtaista.html">Ajankohtaista</a>
       <li><a href="tukijaksi.html">Tukijaksi</a>
     </ul>
   </nav>
   <header class="head">
-    <h1 href="maakaasu.html">MAAKAASU</h1>
+    <h1>MAAKAASU</h1>
   </header>
   <section>
     <article class="blog-post">
       <h2>Make maakaasu great again!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.</p>
-      <img src="Gasum_logo.jpg" class="resize">
+      <img src="Gasum_logo.jpg" class="resize" alt="Could not load picture">
+    </article>
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
+    <p>Gasum</p>
+    <p>Tiina Pajukari</p>
+    <p>VJP-kurssi, kevät 2017</p>
   </footer>
 </body>
 </html>
