--- a/kampanja.html
+++ b/kampanja.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=sky.jpg>
+<body>
 
   <nav class="navigation">
     <ul>
-      <li><a href="index.html">Maakaasu</a>
+      <li><a href="index.html">Etusivu</a>
       <li class="active"><a href="kampanja.html">Kampanja</a>
       <li><a href="ajankohtaista.html">Ajankohtaista</a>
       <li><a href="tukijaksi.html">Tukijaksi</a>
@@ -31,6 +31,9 @@
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
+    <p>Gasum</p>
+    <p>Tiina Pajukari</p>
+    <p>VJP-kurssi, kevät 2017</p>
   </footer>
 </body>
 </html>
