--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
-<body background=sky.jpg>
+<body>
 
   <nav class="navigation">
     <ul>
-      <li><a href="index.html">Maakaasu</a>
+      <li><a href="index.html">Etusivu</a>
       <li><a href="kampanja.html">Kampanja</a>
       <li><a href="ajankohtaista.html">Ajankohtaista</a>
       <li class="active"><a href="tukijaksi.html">Tukijaksi</a>
@@ -23,7 +23,7 @@
     <article class="blog-post">
       <h2> Osoita rakkautesi maakaasua kohtaan Amerikan tapaan!</h2>
       <p>Osta upea "Make maakaasu great again"-lippalakki, joka auttaa sinua löytämään kaltaisesi! Lippalakissa on säätönauha takana, joten sen uskaltaa vaikka ostaa siskonpojalle ylioppilaslahjaksi! Saatavissa pian.</p>
-      <img class="resize" src="Lippis.jpg" width="100" alt="HTML5 Logo"/>
+      <img class="resize" src="Lippis.jpg" width="100" alt="Could not load picture"/>
     </article>
     <article class="blog-post">
       <h3>Vaikuta</h3>
@@ -32,6 +32,9 @@
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
+    <p>Gasum</p>
+    <p>Tiina Pajukari</p>
+    <p>VJP-kurssi, kevät 2017</p>
   </footer>
 </body>
 </html>
