--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -23,6 +23,7 @@
     <article class="blog-post">
       <h2>Uusi kampanjajuliste julkaistu!</h2>
       <img src="VJP_web.jpg" alt="Could not load picture">
+    </article>
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
