--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Huikee testisivu</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
