--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -23,7 +23,7 @@
     <h2> </h2>
     <article class="blog-post">
       <h3>Uusi kampanjajuliste julkaistu!</h3>
-      <img src="VJP_web.jpg" alt="Could not load picture">
+      <img src="assets/VJP_web.jpg" alt="Could not load picture">
     </article>
   </section>
   <footer class="foot">
