--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -24,7 +24,7 @@
     <article class="blog-post">
       <h3> Osoita rakkautesi maakaasua kohtaan Amerikan tapaan!</h3>
       <p>Osta upea "Make maakaasu great again"-lippalakki, joka auttaa sinua löytämään kaltaisesi! Lippalakissa on säätönauha takana, joten sen uskaltaa vaikka ostaa siskonpojalle ylioppilaslahjaksi! Saatavissa pian.</p>
-      <img class="resize" src="Lippis.jpg" width="100" alt="Could not load picture"/>
+      <img class="resize" src="assets/Lippis.png" width="100" alt="Could not load picture"/>
     </article>
     <article class="blog-post">
       <h3>Vaikuta</h3>
