--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Huikee testisivu</title>
+  <title>Maakaasu kampanja</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
+  <link rel="shortcut icon" href="assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
