--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Huikee testisivu</title>
+  <title>Maakaasu kampanja</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
+  <link rel="shortcut icon" href="assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
@@ -28,7 +29,7 @@
     </article>
     <article class="blog-post">
       <h3>Vaikuta</h3>
-      <p> vaikutustapoja listattuna </p>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex. </p>
     </article>
   </section>
   <footer class="foot">
