--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <title>Maakaasu kampanja</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link rel="shortcut icon" href="assets/favicon.ico" />
