--- a/kampanja.html
+++ b/kampanja.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Maakaasu kampanja</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maakaasukampanja</title>
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link rel="shortcut icon" href="assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
