--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
   <link rel="shortcut icon" href="assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="slideshow.js" type="text/javascript"></script>
 </head>
 <body>
