--- a/guessthenumber.html
+++ b/guessthenumber.html
@@ -13,7 +13,7 @@
 		  <p>Guess a number: </p>
 		  <input id="number" type="number">
 		  <br>
-		  <button id="button" type="button" onclick="guessTheNumber">Submit!</button>
+		  <button id="button" type="button" onclick="guessTheNumber()">Submit!</button>
 		</form>
 	</body>
 </html>
