--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.</p>
       <img src="assets/Gasum_logo.png" class="resize" alt="Could not load picture">
     </article>
-    <article class="news">
-      <h4 id="otsikko"></h4>
-      <h5 id="paivamaara"></h5>
-      <p id="sisalto"></p>
-    </article>
+    <div  class="blog-post">
+      <button onclick="previousSlide()">Previous</button>
+      <button id=pause onclick="change(this.id);
+                                pauseCarousel();" >Pause</button>
+      <button onclick="nextSlide()">Next</button>
+      <h4 id="animated" id="otsikko"></h4>
+      <h5 id="animated" id="päivämäärä"></h5>
+      <p id="animated" id="sisältö"></p>
+    </div>
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
