--- a/guessthenumber.html
+++ b/guessthenumber.html
@@ -3,13 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Guess the number!</title>
-
-		<!-- Linkitä javascript tiedostosi tässä -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="maakaasu_style.css">
+		<link rel="shortcut icon" href="assets/favicon.ico" />
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+		<script src="slideshow.js" type="text/javascript"></script>
 		<script src="guessthenumber.js" type="text/javascript"></script>
 
 	</head>
 	<body>
-		<form>
+		<form class="blog-post">
 		  <p>Guess a number: </p>
 		  <input id="number" type="number">
 		  <br>
