--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -24,7 +24,20 @@
   <section>
     <h2> </h2>
     <article class="blog-post">
-      <h3>Uusi kampanjajuliste julkaistu!</h3>
+      <h3>Uusi kampanjavideo</h3>
+        <video class="video-container" width="640" height="360" controls>
+      	<source src="assets/Maakaasu_720p.mp4"  type="video/mp4" />
+      	<source src="assets/Maakaasu_720p.ogv"  type="video/ogg" />
+      	<object  width="640" height="360" type="application/x-shockwave-flash" data="__FLASH__.SWF">
+      		<param name="movie" value="__FLASH__.SWF" />
+      		<param name="flashvars" value="controlbar=over&amp;image=__POSTER__.JPG&amp;file=assets/Maakaasu_720p.mp4" />
+      		<img src="__VIDEO__.JPG"  width="640" height="360" alt="__TITLE__"
+      		     title="No video playback capabilities." />
+      	</object>
+      </video>
+    </article>
+    <article class="blog-post">
+      <h4>Uusi kampanjajuliste julkaistu!</h4>
       <img src="assets/VJP_web.jpg" alt="Could not load picture">
     </article>
   </section>
