--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -16,6 +16,7 @@
       <li><a href="kampanja.html">Kampanja</a>
       <li class="active"><a href="ajankohtaista.html">Ajankohtaista</a>
       <li><a href="tukijaksi.html">Tukijaksi</a>
+      <li><a href="project.html">Putkipeli</a>
     </ul>
   </nav>
   <header class="head">
