--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
     <h2> </h2>
     <article class="blog-post">
       <h3>Make maakaasu great again!</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex.</p>
+      <p>Fossiiliset polttoaineet eivät ole tulevaisuutta. Mutta uusiutuvat energialähteet eivät ole lähitulevaisuutta.
+        Me tarvitsemme puhtaampaa energiaa, mutta sen täytyy myös riittää kattamaan meidän energiatarpeemme.
+        Sairaalamme, koulumme sekä kotimme tarvitsevat lämpöä. Tämän takia me tarvitsemme maakaasua.</p>
+      <p>Maakaasu on ympäristöystävällisin fossiilinen polttoaine, sitä riittää kaksi kertaa pidemmäksi ajaksi kuin öljyä sekä sitä saadaan nyt.
+        Olemme energiantuotannossa käännekohdassa. Olemme entistä tietoisempia siitä mitä aikaisemmat valintamme ovat aiheuttaneet omalle kotiplaneetallemme.
+        Hiili, turve ja öljy. Kolme sanaa, joita monet ovat oppineet kavahtamaan. Emme voi jatkaa samaan malliin.
+        Maailma, Suomi, lapsemme, tarvitsevat puhtaamman ja kirkkaamman tulevaisuuden.</p>
+      <p>Onneksi kaikki ei ole vielä menetetty. On olemassa ratkaisu... Maakaasu.
+        Voimme käyttää maakaasusta saatavaa energiaa siirtymäenergialähteenä muiden fossiilisten polttoaineiden sekä uusiutuvien energialähteiden välillä.
+        Emme saa vielä tarpeeksi energiaa uusiutuvista energialähteistä, joten tarvitsemme maakaasua energiatuotannon säätövaraksi.
+        Teknologia ja putket ovat jo olemassa. Meidän tarvitsee enään vain hyödyntää valmiita resursseja.</p>
+
       <img src="assets/Gasum_logo.png" class="resize" alt="Could not load picture">
     </article>
     <div  class="news">
