--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section>
     <h2> </h2>
     <article class="blog-post">
-      <h3>Make maakaasu great again!</h3>
+      <h3>Energiaa - NYT!</h3>
       <p>Fossiiliset polttoaineet eivät ole tulevaisuutta. Mutta uusiutuvat energialähteet eivät ole lähitulevaisuutta.
         Me tarvitsemme puhtaampaa energiaa, mutta sen täytyy myös riittää kattamaan meidän energiatarpeemme.
         Sairaalamme, koulumme sekä kotimme tarvitsevat lämpöä. Tämän takia me tarvitsemme maakaasua.</p>
