--- a/kampanja.html
+++ b/kampanja.html
@@ -36,6 +36,13 @@
       <img src="assets/maakaasukaavio.PNG" class="resize_1" alt="Could not load picture">
       <p>Maakaaasu on läsnä jokaisen suomalaisen arjessa, ja se tekee meille monenlaista hyvää. Kaasu tulee luonnosta, ja sitä pystytään siirtämään pitkiäkin matkoja turvallisesti ja luontoa säästäen. Kaasua käytetään kaikkialla, niin teollisuudessa, liikenteessä kuin kotonakin.</p>
     </article>
+  <article class="blog-post">
+      <h4>Maakaasun pontentiaali tunnistetaan myös ulkomailla</h4>
+      <p>Energiapohatta T. Boone Pickens puhuu TED-talkissaan maakaasusta puhtaamman tulevaisuuden mahdollistajana.</p>
+      <a href="https://www.ted.com/talks/t_boone_pickens_let_s_transform_energy_with_natural_gas#t-42468">Katso video täältä.</a>
+      <p></p>
+      <img src="assets/TED.png" class="resize_1" alt="Could not load picture">
+  </article>
   </section>
   <footer class="foot">
     <p>Maakaasukampanja 2017</p>
