--- a/project.html
+++ b/project.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+  <nav class="navigation">
+    <ul>
+      <li><a href="index.html">Etusivu</a>
+      <li><a href="kampanja.html">Kampanja</a>
+      <li><a href="ajankohtaista.html">Ajankohtaista</a>
+      <li><a href="tukijaksi.html">Tukijaksi</a>
+      <li class="active"><a href="project.html">Putkipeli</a>
+    </ul>
+  </nav>
   <header>
     <h1 class="game-head">MAAKAASUPUTKIPELI</h1>
   </header>
