--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -43,10 +43,13 @@
     </article>
   </section>
   <footer class="foot">
-    <p>Maakaasukampanja 2017</p>
-    <p>Gasum</p>
-    <p>Tiina Pajukari</p>
-    <p>VJP-kurssi, kevät 2017</p>
+    <div style="display: inline-block;padding:10px;">
+      <p>Maakaasukampanja 2017</p>
+      <p>Gasum</p>
+    </div>
+    <a href="https://www.instagram.com/energiaanyt/" style="display: inline-block;">
+      <img src="assets/Instagram-64.png" alt="Instagram" style="float:right;width:64px;height:64px;">
+    </a>
   </footer>
 </body>
 </html>
