--- a/ajankohtaista.html
+++ b/ajankohtaista.html
@@ -38,8 +38,8 @@
       </video>
     </article>
     <article class="blog-post">
-      <h4>Uusi kampanjajuliste julkaistu!</h4>
-      <img src="assets/VJP_web.jpg" alt="Could not load picture">
+      <h4>Uudet kampanjajulisteemme!</h4>
+      <img src="assets/kollaasi.png" alt="Could not load picture" style="width: 410px; height: 550px;">
     </article>
   </section>
   <footer class="foot">
