--- a/tukijaksi.html
+++ b/tukijaksi.html
@@ -31,7 +31,9 @@
     </article>
     <article class="blog-post">
       <h3>Vaikuta</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem dolor, bibendum ut consequat vitae, aliquet quis tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sed lectus id ligula posuere feugiat. Nunc congue elit quis arcu iaculis, a faucibus augue ornare. Praesent sagittis nunc in nulla gravida posuere. Aenean blandit nisi nec justo aliquam, lobortis egestas lacus sagittis. Integer vulputate lobortis metus vel volutpat. Fusce venenatis maximus tellus sit amet convallis. Integer nibh quam, venenatis nec velit eu, tempus hendrerit ex. </p>
+      <p>Vaikuttaa voit osallistumalla kampanjatapahtumiimme, jossa pääset myös keskustelemaan eri osapuolien edustajien
+      ja asiantuntijoiden kanssa, sekä kuuntelemaan niin kotimaisia kuin ulkomaisia puhujia. Kampanjan vapaaehtoiseksi voit ilmottautua
+      sivuiltamme lötyviin yhteystietoihin. Vapaaehtoisena voit päästä esimerkiksi toteuttamaan tapahtumiamme.</p>
     </article>
   </section>
   <footer class="foot">
