--- a/index.html
+++ b/index.html
@@ -3,63 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maakaasukampanja</title>
-  <link rel="stylesheet" type="text/css" href="maakaasu_style.css">
-  <link rel="shortcut icon" href="assets/favicon.ico" />
+  <title>Phuksikapteeniksi</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <!--<link rel="shortcut icon" href="assets/favicon.ico" />-->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-  <script src="slideshow.js" type="text/javascript"></script>
 </head>
+
 <body>
-
-  <nav class="navigation">
-    <ul>
-      <li class="active"><a href="index.html">Etusivu</a>
-      <li><a href="kampanja.html">Kampanja</a>
-      <li><a href="ajankohtaista.html">Ajankohtaista</a>
-      <li><a href="tukijaksi.html">Tukijaksi</a>
-      <li><a href="project.html">Putkipeli</a>
-    </ul>
-  </nav>
   <header class="head">
-    <h1>MAAKAASU</h1>
+    <h1>Tiina phuksikapteeniksi '18</h1>
   </header>
-  <section>
-    <h2> </h2>
     <article class="blog-post">
-      <h3>Energiaa - NYT!</h3>
-      <p>Fossiiliset polttoaineet eivät ole tulevaisuutta. Mutta uusiutuvat energialähteet eivät ole lähitulevaisuutta.
-        Me tarvitsemme puhtaampaa energiaa, mutta sen täytyy myös riittää kattamaan meidän energiatarpeemme.
-        Sairaalamme, koulumme sekä kotimme tarvitsevat lämpöä. Tämän takia me tarvitsemme maakaasua.</p>
-      <p>Maakaasu on ympäristöystävällisin fossiilinen polttoaine, sitä riittää kaksi kertaa pidemmäksi ajaksi kuin öljyä sekä sitä saadaan nyt.
-        Olemme energiantuotannossa käännekohdassa. Olemme entistä tietoisempia siitä mitä aikaisemmat valintamme ovat aiheuttaneet omalle kotiplaneetallemme.
-        Hiili, turve ja öljy. Kolme sanaa, joita monet ovat oppineet kavahtamaan. Emme voi jatkaa samaan malliin.
-        Maailma, Suomi, lapsemme, tarvitsevat puhtaamman ja kirkkaamman tulevaisuuden.</p>
-      <p>Onneksi kaikki ei ole vielä menetetty. On olemassa ratkaisu... Maakaasu.
-        Voimme käyttää maakaasusta saatavaa energiaa siirtymäenergialähteenä muiden fossiilisten polttoaineiden sekä uusiutuvien energialähteiden välillä.
-        Emme saa vielä tarpeeksi energiaa uusiutuvista energialähteistä, joten tarvitsemme maakaasua energiatuotannon säätövaraksi.
-        Teknologia ja putket ovat jo olemassa. Meidän tarvitsee enään vain hyödyntää valmiita resursseja.</p>
-
-      <img src="assets/Gasum_logo.png" class="resize" alt="Could not load picture">
+      <p>Moikka! Oon Tiina Pajukari, 2. vuoden infolainen, ja haen kippariksi Athenen hallitukseen
+      2018. Seuraavassa kerron, miksi just minä haluan phuksikapteeniksi.</p>
+      <p>Yksinkertaisesti: rakkaudesta Atheneen, phuksikasvatukseen ja teekkarikulttuuriin. En keksi mitään siistimpää, kuin päästä antamaan takaisin uudelle phuksivuosikurssille se kaikki (ja enemmän!), mitä oon itse kokenut phuksina ja saanut Athenelta. Jo ajatus siitä, että pääsisin tekemään näitä hommia, herättää mussa sellasta riemua ja paloa, että sitä on vaikea pukea sanoiksi. Vapaaehtoistoiminta on ollut ihan mun lempparijuttuja jo 15-vuotiaasta ja näen, että phuksikapteenius olisi luonteva jatkumo mun ennestään aktiiviselle historialle mm. isosena ja vastuuISOna.</p>
+      <p>Musta on kanssa huikeeta, että phuksikapteeni istuu killan hallituksessa. Jo heti ekalla orientaatioviikolla näki kuinka hyvällä meiningillä Athenea pyöritetään ja kehitetään ja tiesin heti, että mä haluan tehdä sitä joku päivä itsekin. Tällä hetkellä musta hallituksen olisi erityisen tärkeää keskittyä kiltalaisten hyvinvoinnista huolehtimiseen ja näin phuksikapteenillakin paikkansa sen edistämisessä. Lisäksi oon tosi innoissani lähestyvistä Athenen kaksikymppisistä ja gaalavuoden mahdollisuuksista.</p>
+      <p>Mun mielestä phuksikapteenin tärkeimpiä tehtäviä on olla läsnä phuksille, omana itsenään, ja kohdata jokainen heistä yksilönä. Phuksikapteenin vastuulla on phuksien opastaminen teekkariuden saloihin ja sopeuttaminen osaksi iki-ihanaa kiltaamme. Tämä tapahtuu osaltaan järjestämällä niitä phuksivuoden siisteimpiä tapahtumia. Tapahtumilla pyritään myös ryhmäyttämään phukseja niin, että jokainen löytäisi paikkansa yhteisössämme.
+        Odotan tietysti innolla myös kaikkea, mitä itse pääsee kokemaan ja oppimaan phuksikapteeniuden aikana, mutta mulle tärkeää on, että näitä hommia tehdään phuksit ja kilta edellä. Vaikka sanotaan, että phuksikapteenius vie paljon aikaa ja energiaa, uskon saavani siitä paljon enemmän ja oon valmis tekemään tätä hommaa koko sydämestäni ja antamaan itsestäni 110%. Suomen tämän hetken kuumimman kansallisrunoilijan, Jare Tiihosen, sanoja lainaten: </p>
+        <p class="b">“Se ei oo koskaan, et mä koitan, mä koitan / vaan jos sä tarviit jotain, niin mä hoidan, mä hoidan”.</p>
+        <p>Jos tulee kyssäreitä tai haluut muuten vaan jutella, älä pelkää tulla kiskasemaan hihasta Olkkarilla tai chättäillä TG:ssä @tunapurkki :)</p>
+        <p> Nähdään Olkkarilla, vaalikahvilassa ja tietty itse vaaleissa, jee!</p>
     </article>
-    <div  class="news">
-      <button onclick="previousSlide()">Previous</button>
-      <button id=pause onclick="change(this.id);
-                                pauseCarousel();" >Pause</button>
-      <button onclick="nextSlide()">Next</button>
-      <h4 class="efect" id="otsikko"></h4>
-      <h5 class="efect" id="päivämäärä"></h5>
-      <p class="efect" id="sisältö"></p>
-    </div>
-  </section>
+
   <footer class="foot">
     <div style="display: inline-block;padding:10px;">
-      <p>Maakaasukampanja 2017</p>
-      <p>Gasum</p>
+      <p>Tämä on Tiina Pajukarin ehdokassivu Athenen vaaleissa syksyllä 2017</p>
     </div>
-    <a href="https://www.instagram.com/energiaanyt/" style="display: inline-block;">
-      <img src="assets/Instagram-64.png" alt="Instagram" style="float:right;width:64px;height:64px;">
-    </a>
   </footer>
+  </section>
 </body>
 </html>
